decimal to binary code

--- a/projectx/projectx.html
+++ b/projectx/projectx.html
@@ -6,13 +6,19 @@
   <meta name="viewport" content="width=device-width">
   <title>replit</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
+  <style>
+  </style>
 </head>
 
 <body>
-  <h1>PROJECT X LETS GO</h1>
+  <h1>PROJECT X</h1>
+  <div class="slogan-box">
+    Welcome to University Marketplace!
+  </div>
+
   <script src="script.js"></script>
 
-<button>hello</button>
+  <button>MENU</button>
 
 </body>
 
